Added HomeActivity (DayNight)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="blue_a1">#2196F3</color>
+    <color name="green_a1">#8BBB19</color>
+    <color name="gray_a1">#686B73</color>
+
+
 </resources>
