--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".HomeActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        layout="@layout/layout_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_homeLogo"
+                android:layout_width="340dp"
+                android:layout_height="91dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                app:srcCompat="@drawable/dummy_logo" />
+
+            <Button
+                android:id="@+id/btnInfo"
+                style="@style/Theme.Base.Button"
+                android:layout_height="125dp"
+                android:background="@color/blue_a1"
+                android:text="@string/info" />
+
+            <Button
+                android:id="@+id/btnProducts"
+                style="@style/Theme.Base.Button"
+                android:layout_height="125dp"
+                android:background="@color/blue_a1"
+                android:text="@string/products" />
+
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
