--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.EPSIAndroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Base" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -29,4 +29,33 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+    <style name="Theme.Base.Button" parent="TextAppearance.AppCompat.Widget.Button">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/white</item>
+
+        <item name="android:background">@drawable/flat_white_black_button_background</item>
+        <item name="android:layout_width">170dp</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_marginTop">50dp</item>
+
+    </style>
+
+
+        <!-- Flat White Button Style with Black Border 2dp -->
+        <style name="FlatWhiteBlackButton" parent="Widget.AppCompat.Button">
+            <item name="android:textSize">22sp</item>
+            <item name="android:textColor">@color/white</item>
+            <item name="android:background">@drawable/flat_white_black_button_background</item>
+            <item name="android:layout_width">170dp</item>
+            <item name="android:layout_height">70dp</item>
+            <item name="android:layout_gravity">center_horizontal</item>
+            <item name="android:layout_marginTop">50dp</item>
+        </style>
+
+
+
+
 </resources>
