--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
@@ -9,9 +8,7 @@
     <color name="white">#FFFFFFFF</color>
 
 
-    <color name="blue_a1">#2196F3</color>
-    <color name="green_a1">#8BBB19</color>
-    <color name="gray_a1">#686B73</color>
-
+    <color name="Sky_Blue">#2196F3</color>
+    <color name="Deep_Ocean_Blue">#0069A3</color>
 
 </resources>
